chore: ajustar .gitignore para ignorar arquivos do Visual Studio
- Adicionar entradas para .vs/ e arquivos de usuÃ¡rio do Visual Studio
- Remover arquivos .vs/ e .csproj.user do controle de versÃ£o
- Adicionar suporte para Visual Studio Code e JetBrains Rider

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,22 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio
+.vs/
+*.user
+*.userosscache
+*.sln.docstates
+*.suo
+*.userprefs
+*.csproj.user
+*.vbproj.user
+*.rsuser
+
+# Visual Studio Code
+.vscode/
+*.code-workspace
+
+# JetBrains Rider
+.idea/
+*.sln.iml
