ix(Story-03): Corrigir schema DynamoDB para tabela fastfood-products
- Validar e corrigir estrutura de dados da tabela fastfood-products
- Partition Key deve ser 'product_id' (snake_case), não 'order_id'
- Atributos devem seguir convenção snake_case conforme DynamoDbTableConfiguration:
  * product_id (PK)
  * category (para GSI Category-Index)
  * created_at
- Endpoint GET /api/products/{id} agora funciona corretamente
- Tratamento de erro em ProductDynamoDbRepository.GetByIdAsync já existente
  para identificar problemas de schema

Contexto: Story 03 - Migração MySQL/EF Core para DynamoDB
Subtask relacionada: Subtask-04 (Implementar ProductDynamoDbRepository)

--- a/src/Infra/FastFood.OrderHub.Infra.Persistence/FastFood.OrderHub.Infra.Persistence.csproj
+++ b/src/Infra/FastFood.OrderHub.Infra.Persistence/FastFood.OrderHub.Infra.Persistence.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\Core\FastFood.OrderHub.Application\FastFood.OrderHub.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.400" />
+  </ItemGroup>
+
 </Project>
