feat: Implementar todas as APIs do ProductsController com testes unitários
- Implementar GET /api/products (listagem paginada com filtros)
- Implementar POST /api/products (criar produto)
- Implementar PUT /api/products/{id} (atualizar produto)
- Implementar DELETE /api/products/{id} (remover produto - soft delete)
- Adicionar método GetPagedAsync no IProductDataSource e repositório
- Criar UseCases: GetProductsPaged, CreateProduct, UpdateProduct, DeleteProduct
- Criar InputModels, OutputModels, Responses e Presenters correspondentes
- Corrigir formatação numérica para usar CultureInfo.InvariantCulture (fix vírgula decimal)
- Implementar 31 testes unitários (85%+ cobertura)
- Todos os testes passando

--- a/src/tests/FastFood.OrderHub.Tests.Unit/FastFood.OrderHub.Tests.Unit.csproj
+++ b/src/tests/FastFood.OrderHub.Tests.Unit/FastFood.OrderHub.Tests.Unit.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\FastFood.OrderHub.Domain\FastFood.OrderHub.Domain.csproj" />
+    <ProjectReference Include="..\..\Core\FastFood.OrderHub.Application\FastFood.OrderHub.Application.csproj" />
+    <ProjectReference Include="..\..\InterfacesExternas\FastFood.OrderHub.Api\FastFood.OrderHub.Api.csproj" />
   </ItemGroup>
 
 </Project>
