--- a/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
+++ b/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DynamoDb": {
+    "AccessKey": "",
+    "SecretKey": "",
+    "SessionToken": "",
+    "Region": "us-east-1",
+    "ServiceUrl": ""
+  }
 }
