--- a/src/Core/FastFood.OrderHub.Application/FastFood.OrderHub.Application.csproj
+++ b/src/Core/FastFood.OrderHub.Application/FastFood.OrderHub.Application.csproj
@@ -3,7 +3,13 @@
   <ItemGroup>
     <ProjectReference Include="..\FastFood.OrderHub.Domain\FastFood.OrderHub.Domain.csproj" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+  
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
