funcionando login por cognito e customer, falta só organizar e testar no k8s

--- a/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
+++ b/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
@@ -12,5 +12,18 @@
     "SessionToken": "",
     "Region": "us-east-1",
     "ServiceUrl": ""
+  },
+  "Authentication": {
+    "Cognito": {
+      "Region": "us-east-1",
+      "UserPoolId": "",
+      "ClientId": "",
+      "ClockSkewMinutes": 5
+    }
+  },
+  "JwtCustomer": {
+    "Issuer": "FastFood.Auth",
+    "Audience": "FastFood.API",
+    "SecretKey": "your-super-secret-key-minimum-32-characters-long-for-hmac-sha256-development"
   }
 }
