--- a/src/InterfacesExternas/FastFood.OrderHub.Api/FastFood.OrderHub.Api.csproj
+++ b/src/InterfacesExternas/FastFood.OrderHub.Api/FastFood.OrderHub.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
