--- a/src/InterfacesExternas/FastFood.OrderHub.Migrator/appsettings.json
+++ b/src/InterfacesExternas/FastFood.OrderHub.Migrator/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "DynamoDb": {
-    "AccessKey": "local",
-    "SecretKey": "local",
+    "AccessKey": "",
+    "SecretKey": "",
     "SessionToken": "",
     "Region": "us-east-1",
-    "ServiceUrl": "http://localhost:8000"
+    "ServiceUrl": ""
   }
 }
