--- a/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
+++ b/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
@@ -24,6 +24,6 @@
   "JwtCustomer": {
     "Issuer": "FastFood.Auth",
     "Audience": "FastFood.API",
-    "SecretKey": "your-super-secret-key-minimum-32-characters-long-for-hmac-sha256-development"
+    "SecretKey": ""
   }
 }
