maior cobertura testes sonar

--- a/src/tests/FastFood.OrderHub.Tests.Unit/FastFood.OrderHub.Tests.Unit.csproj
+++ b/src/tests/FastFood.OrderHub.Tests.Unit/FastFood.OrderHub.Tests.Unit.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\..\Core\FastFood.OrderHub.Domain\FastFood.OrderHub.Domain.csproj" />
     <ProjectReference Include="..\..\Core\FastFood.OrderHub.Application\FastFood.OrderHub.Application.csproj" />
     <ProjectReference Include="..\..\InterfacesExternas\FastFood.OrderHub.Api\FastFood.OrderHub.Api.csproj" />
+    <ProjectReference Include="..\..\Infra\FastFood.OrderHub.Infra.Persistence\FastFood.OrderHub.Infra.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
