ajustes finais para integração entre micro serviços

--- a/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.Development.json
+++ b/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.Development.json
@@ -24,5 +24,11 @@
     "Issuer": "FastFood.Auth",
     "Audience": "FastFood.API",
     "SecretKey": "chave-ultra-secreta-para-o-projeto-fastfood1"
+  },
+  "PaymentService": {
+    "BaseUrl": "https://localhost:7088/",
+    "TimeoutSeconds": 30,
+    "RetryEnabled": false,
+    "RetryCount": 1
   }
 }
