--- a/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
+++ b/src/InterfacesExternas/FastFood.OrderHub.Api/appsettings.json
@@ -25,5 +25,11 @@
     "Issuer": "FastFood.Auth",
     "Audience": "FastFood.API",
     "SecretKey": ""
+  },
+  "PaymentService": {
+    "BaseUrl": "https://localhost:7088/",
+    "TimeoutSeconds": 30,
+    "RetryEnabled": false,
+    "RetryCount": 1
   }
 }
